# eversource_scraper

./: .gitignore  pyproject.toml
src/eversource_scraper/: MySQLdbAdapter.py  __init__.py  __main__.py  mysql_inserter.py  selenium_scraper.py  selenium_toy.py
